# q-alpha

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  restart.sh  start.sh  stop.sh
backend/: README.md  config.py  main.py
backend/api/routes/: assets.py  backtest.py  market.py  strategies.py
backend/migrations/: add_asset_name_index.py
backend/schemas/: __init__.py  asset.py  backtest.py  market.py  strategy.py
backend/services/: backtest_engine.py  external_asset_service.py  metrics_calculator.py
backend/utils/: calculation.py  date_utils.py
data_fetcher/: README.md  __init__.py  akshare_etf_fetcher.py  akshare_fetcher.py  baostock_fetcher.py  base.py  cache_manager.py  config.py
data_fetcher/tests/: __init__.py  test_cache.py  test_fetcher.py
database/: README.md  __init__.py  connection.py
database/models/: __init__.py  asset.py  backtest.py  base.py  market_data.py  strategy.py
database/repositories/: __init__.py  asset_repo.py  backtest_repo.py  market_repo.py  strategy_repo.py
database/seeds/: assets.json  strategies.json
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/stores/: asset.ts  backtest.ts  strategy.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
frontend/src/views/: BacktestResult.vue  Dashboard.vue  DataManage.vue  StrategyConfig.vue
migrations/: add_benchmark_curves.py
scripts/: init_db.py  run_all.sh
(+1 files in other folders)
